/* 
  Localizable.strings
  ApnAssister

  Created by WataruSuzuki on 2016/03/24.
  Copyright © 2016年 WataruSuzuki. All rights reserved.
*/
payloadDescription = "APN Assistant profile";

keyApnsName = "Data apn name";
keyApnsAuthenticationType = "Data apn authentication type";
keyApnsUsername = "Data apn user name";
keyApnsPassword = "Data apn password";
keyApnsProxyServer = "Data apn proxy server";
keyApnsProxyServerPort = "Data apn proxy server port";
keyApnsAllowedProtocolMask = "Data apn protocol";
keyApnsAllowedProtocolMaskInRoaming = "Data apn protocol in roaming";
keyApnsAllowedProtocolMaskInDomesticRoaming = "Data apn protocol in domestic roaming";

keyAttachApnName = "Default apn name";
keyAttachApnAuthenticationType = "Default apn authentication type";
keyAttachApnUsername = "Default apn user name";
keyAttachApnPassword = "Default apn password";
keyAttachApnProxyServer = "Default apn proxy server";
keyAttachApnProxyServerPort = "Default apn proxy server port";
keyAttachApnAllowedProtocolMask = "Default apn protocol";
keyAttachApnAllowedProtocolMaskInRoaming = "Default apn protocol in roaming";
keyAttachApnAllowedProtocolMaskInDomesticRoaming = "Default apn protocol in domestic roaming";

setDataApnManual = "Set Data Apn manually";
favoriteList = "Favorite List";
profileList = "Profile List";
downloadList = "Download List";
availableList = "Available List";
aboutThisApp = "About this App";
edit_apn = "Edit APN";

no_settings = "Empty";
not_this_time = "Not this time";
yes_cache = "Yes, cache data";
yes_update = "Yes, update";
understand = "I understarnd the risks and continue.";
is_update_now = "Is update setting now?";

config_mobile_network = "Config mobile network";
mobile_network = "Mobile network";

isThisFavoriteOne = "Is this favorite one?";
nameOfThisApnProfile = "Name of This APN profile";
menu = "Menu";

setThisApnToDevice = "Set this APN to Device";
share = "Share";
edit = "Edit";
cancel = "Cancel";
cache = "Cache";

tutorial_message = "No APN profile are available. You can create new one to tap here!!";
latest_set_profile = "Profile latest set to device";
unknown = "Unknown...";
openSettingApp = "Setting";

apn_assistant = "APN Assistant";
show_favorites = "Show favorites";

custom = "Custom: created by carrier info";
public = "Public";

msg_complete = "Complete";
complete = "Complete";
complete_cache = "Complete cached data";
caution = "Caution";
caution_profile = "If your APN settings are wrong, you might lose cellular-data connectivity and receive additional charges. \nPlease contact your carrier to verify the correct APN settings if you worried.";
update_available_list = "Do you update available list now?";
update_available_profile = "Available list is updated. And do you also cache available apn profiles?";
confirm = "Confirm";

ata_summaryAPNAssistant = "This app manages APN information of MVNO. \n\nThis app also bookmarks APN information of MVNO. This app also bookmarks your MVNO carrier's APN configuration profile URL and you can install configuration profile if your MVNO carrier release information.";
ata_summaryAPNAssistantLite = "This app manage APN information as Memo. \n\nPlease get other link app or share E-mail if you modify APN setting.";
ata_apn = "What's APN?";
ata_profile = "What's configuration profile?";
ata_webApp = "Web App";

how_about_apn = "An Access Point Name (APN) is a gateway between a GSM, GPRS, 3G or 4G mobile network and another computer network, frequently the public Internet.";
how_about_profile = "This file is used to perform the configuration of the iOS-based devices. \nThis app bookmarks profiles of released MVNO carriers or made by MVNO information";
how_about_webApp = "Web app's link is here, it's free.\nPlease share your friends.";

error = "Error";
fail_load_profile = "Fail to load information. Please ask to your carrier.";
fail_load_profile_security = "Fail to load information because this server is may not safe. Please ask to your carrier.";
fail_bacause_apple_not_permit = "Apple does not permit to install configuration profile from app.\nPlease ask to Apple or Mobile operator if APN setting is not display.";
nodata_available = "No data available";

ErrorCodeInvalidCustomToken = "Invalid custom token";
ErrorCodeCustomTokenMismatch = "Custom token mismatch";
ErrorCodeInvalidCredential = "Invalid credential";
ErrorCodeUserDisabled = "Disabled user";
ErrorCodeOperationNotAllowed = "Operation not allowed";
ErrorCodeEmailAlreadyInUse = "The email address is already in use by another account.";
ErrorCodeInvalidEmail = "The email address is badly formatted.";
ErrorCodeWrongPassword = "The password is invalid or the user does not have a password.";
ErrorCodeTooManyRequests = "Too many requests. Please try again later.";
ErrorCodeUserNotFound = "User not found";
ErrorCodeRequiresRecentLogin = "Requires recent login";
ErrorCodeProviderAlreadyLinked = "Provider already linked";
ErrorCodeNoSuchProvider = "No such provider";
ErrorCodeInvalidUserToken = "Invalid user token";
ErrorCodeNetworkError = "Network error";
ErrorCodeUserTokenExpired = "Token expired";
ErrorCodeInvalidAPIKey = "Invalid API key";
ErrorCodeUserMismatch = "User mismatch";
ErrorCodeCredentialAlreadyInUse = "Credential already in use";
ErrorCodeWeakPassword = "The password must be 6 characters long or more.";
ErrorCodeAppNotAuthorized = "Not authorized";
ErrorCodeKeychainError = "Keychain error";
ErrorCodeInternalError = "Internal error";

GlobalSIM = "Global SIM";
Albania = "Albania";
Algeria = "Algeria";
Angola = "Angola";
Anguilla = "Anguilla";
Antigua_and_Barbuda = "Antigua and Barbuda";
Argentina = "Argentina";
Armenia = "Armenia";
Australia = "Australia";
Austria = "Austria";
Azerbaijan = "Azerbaijan";
Bahamas = "Bahamas";
Bahrain = "Bahrain";
Barbados = "Barbados";
Belarus = "Belarus";
Belgium = "Belgium";
Belize = "Belize";
Benin = "Benin";
Bermuda = "Bermuda";
Bhutan = "Bhutan";
Bolivia = "Bolivia";
Botswana = "Botswana";
Brazil = "Brazil";
British_Virgin_Islands = "British Virgin Islands";
Brunei = "Brunei";
Bulgaria = "Bulgaria";
Burkina_Faso = "Burkina Faso";
Cambodia = "Cambodia";
Canada = "Canada";
Cape_Verde = "Cape Verde";
Cayman_Islands = "Cayman Islands";
Chad = "Chad";
Chile = "Chile";
China = "China";
Colombia = "Colombia";
Congo_Republic_of = "Congo,Republic of";
Costa_Rica = "Costa Rica";
Croatia = "Croatia";
Cyprus = "Cyprus";
Czech_Republic = "Czech Republic";
Denmark = "Denmark";
Dominica = "Dominica";
Dominican_Republic = "Dominican Republic";
Ecuador = "Ecuador";
Egypt = "Egypt";
El_Salvador = "El Salvador";
Estonia = "Estonia";
Fiji = "Fiji";
Finland = "Finland";
France = "France";
Gambia = "Gambia";
Germany = "Germany";
Ghana = "Ghana";
Greece = "Greece";
Grenada = "Grenada";
Guatemala = "Guatemala";
Guinea_Bissau = "Guinea-Bissau";
Guyana = "Guyana";
Honduras = "Honduras";
Hong_Kong = "Hong Kong";
Hungary = "Hungary";
Iceland = "Iceland";
India = "India";
Indonesia = "Indonesia";
Ireland = "Ireland";
Israel = "Israel";
Italy = "Italy";
Jamaica = "Jamaica";
Japan = "Japan";
Jordan = "Jordan";
Kazakhstan = "Kazakhstan";
Kenya = "Kenya";
Kuwait = "Kuwait";
Kyrgyzstan = "Kyrgyzstan";
Laos = "Laos";
Latvia = "Latvia";
Lebanon = "Lebanon";
Liberia = "Liberia";
Lithuania = "Lithuania";
Luxembourg = "Luxembourg";
Macao = "Macao";
Macedonia = "Macedonia";
Madagascar = "Madagascar";
Malawi = "Malawi";
Malaysia = "Malaysia";
Mali = "Mali";
Malta = "Malta";
Mauritania = "Mauritania";
Mauritius = "Mauritius";
Mexico = "Mexico";
Micronesia = "Micronesia";
Moldova = "Moldova";
Mongolia = "Mongolia";
Montserrat = "Montserrat";
Mozambique = "Mozambique";
Namibia = "Namibia";
Nepal = "Nepal";
Netherlands = "Netherlands";
New_Zealand = "New Zealand";
Nicaragua = "Nicaragua";
Niger = "Niger";
Nigeria = "Nigeria";
Norway = "Norway";
Oman = "Oman";
Pakistan = "Pakistan";
Palau = "Palau";
Panama = "Panama";
Papua_New_Guinea = "Papua New Guinea";
Paraguay = "Paraguay";
Peru = "Peru";
Philippines = "Philippines";
Poland = "Poland";
Portugal = "Portugal";
Qatar = "Qatar";
Republic_of_Korea = "Republic of Korea";
Romania = "Romania";
Russia = "Russia";
Saudi_Arabia = "Saudi Arabia";
Senegal = "Senegal";
Seychelles = "Seychelles";
Sierra_Leone = "Sierra Leone";
Singapore = "Singapore";
Slovakia = "Slovakia";
Slovenia = "Slovenia";
Solomon_Islands = "Solomon Islands";
South_Africa = "South Africa";
Spain = "Spain";
Sri_Lanka = "Sri Lanka";
St_Kitts = "St. Kitts";
St_Lucia = "St. Lucia";
St_Vincent_and_the_Grenadines = "St. Vincent and the Grenadines";
Suriname = "Suriname";
Swaziland = "Swaziland";
Sweden = "Sweden";
Switzerland = "Switzerland";
Taiwan = "Taiwan";
Tajikistan = "Tajikistan";
Tanzania = "Tanzania";
Thailand = "Thailand";
Trinidad_and_Tobago = "Trinidad and Tobago";
Tunisia = "Tunisia";
Turkey = "Turkey";
Turkmenistan = "Turkmenistan";
Turks_and_Caicos = "Turks and Caicos";
Uganda = "Uganda";
UK = "UK";
Ukraine = "Ukraine";
United_Arab_Emirates = "United Arab Emirates";
Uruguay = "Uruguay";
USA = "USA";
Uzbekistan = "Uzbekistan";
Venezuela = "Venezuela";
Vietnam = "Vietnam";
Yemen = "Yemen";
Zimbabwe = "Zimbabwe";
