...
    static let AllowedProtocolMask = "AllowedProtocolMask"
    static let AllowedProtocolMaskInRoaming = "AllowedProtocolMaskInRoaming"
    static let AllowedProtocolMaskInDomesticRoaming = "AllowedProtocolMaskInDomesticRoaming"
}

enum AllowedProtocolMask: Int {
    case nothing = 0,
    ipv4,
    ipv6,
    both,
    max
    
    func toString() -> String {
        return String(describing: self)
    }
}
...
