...
        super.viewDidLoad()

        self.navigationItem.title = NSLocalizedString("edit_apn", comment: "")
        self.tableView.estimatedRowHeight = 90
        self.tableView.rowHeight = UITableView.automaticDimension
        self.tableView.keyboardDismissMode = .onDrag
        tableView.accessibilityIdentifier = "EditApnTableView"
        //tableView.isAccessibilityElement = true

        registerCustomCell("TextFieldCell")
        registerCustomCell("UISwitchCell")
        registerCustomCell("SegmentedCtrlCell")
        registerCustomCell("PickerCell")
...
